tests/nala/error/for-return-void.nl

const nums = [1, 2, 3, 4];
mut i = 0;

for num in nums {
    print(num);
    i = i + 1;
}